--- a/sa-token-demo-oauth2-server/pom.xml
+++ b/sa-token-demo-oauth2-server/pom.xml
@@ -137,6 +137,7 @@
 				<includes>
 					<include>static/**</include>
 					<include>templates/**</include>
+					<include>mapper/**</include>
 				</includes>
 			</resource>
 			<resource>
